<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Applepie">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Omelette">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imageView41"
                        android:layout_width="455dp"
                        android:layout_height="415dp"
                        android:clickable="true"
                        android:src="@drawable/applepielayout"

                        tools:ignore="SpeakableTextPresentCheck" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10sp"
                    android:layout_marginTop="10sp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView161"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto_bold"
                        android:text="@string/nutrition"
                        android:textColor="#6D289F"
                        android:textSize="30dp" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10sp"
                        android:baselineAligned="false"
                        android:orientation="horizontal"
                        android:textAlignment="gravity">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical"
                            android:textAlignment="center">

                            <TextView
                                android:id="@+id/textView171"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="124"
                                android:textAlignment="center"
                                android:textSize="20dp" />

                            <TextView
                                android:id="@+id/textView181"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/roboto_bold"
                                android:text="Calories"
                                android:textAlignment="center"
                                android:textColor="#000000"
                                android:textSize="20dp" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginLeft="20dp"
                            android:orientation="vertical"
                            android:textAlignment="center">

                            <TextView
                                android:id="@+id/fatamount"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="5g"
                                android:textAlignment="center"
                                android:textSize="20dp"
                                tools:ignore="DuplicateIds" />

                            <TextView
                                android:id="@+id/fat"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/roboto_bold"
                                android:text="Total Fat"
                                android:textAlignment="center"
                                android:textColor="#000000"
                                android:textSize="20dp"
                                tools:ignore="DuplicateIds" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginLeft="40dp"
                            android:layout_marginRight="5dp"
                            android:orientation="vertical"
                            android:textAlignment="center">

                            <TextView
                                android:id="@+id/proteinamount"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="9g"
                                android:textAlignment="center"
                                android:textSize="20dp" />

                            <TextView
                                android:id="@+id/protein"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/roboto_bold"
                                android:text="Protein"
                                android:textAlignment="center"
                                android:textColor="#000000"
                                android:textSize="20dp" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginLeft="25dp"
                            android:layout_marginRight="10dp"
                            android:orientation="vertical"
                            android:textAlignment="center">

                            <TextView
                                android:id="@+id/carbsamount"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="20g"
                                android:textAlignment="center"
                                android:textSize="20dp" />

                            <TextView
                                android:id="@+id/carbs"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/roboto_bold"
                                android:text="Carbs"
                                android:textAlignment="center"
                                android:textColor="#000000"
                                android:textSize="20dp" />
                        </LinearLayout>

                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="10dp"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/textView2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/roboto_bold"
                            android:text="@string/ingredient"
                            android:textColor="#6D289F"
                            android:textSize="30dp" />

                        <TextView
                            android:id="@+id/textView11"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/aing1"
                            android:textSize="20dp" />

                        <TextView
                            android:id="@+id/textView4"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/aing2"
                            android:textSize="20dp" />

                        <TextView
                            android:id="@+id/textView15"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/aing4"
                            android:textSize="20dp" />

                        <TextView
                            android:id="@+id/textView19"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/aing5"
                            android:textSize="20dp" />

                        <TextView
                            android:id="@+id/textView5"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/aing3"
                            android:textSize="20dp" />

                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:layout_marginBottom="20dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView20"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:fontFamily="@font/roboto_bold"
                        android:text="@string/steps"
                        android:textColor="#6D289F"
                        android:textSize="30dp" />

                    <TextView
                        android:id="@+id/textView21"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/astep1"
                        android:textSize="20dp" />

                    <TextView
                        android:id="@+id/textView22"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/astep2"
                        android:textSize="20dp" />

                    <TextView
                        android:id="@+id/textView23"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/astep3"
                        android:textSize="20dp" />

                    <TextView
                        android:id="@+id/textView24"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/astep4"
                        android:textSize="20dp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView25"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="Add Comment:"
                        android:textColor="#040000"
                        android:textSize="18dp" />

                    <TextView
                        android:id="@+id/comment"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="TextView" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/commentinp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:inputType="textPersonName"
                        android:text="Name" />

                    <Button
                        android:id="@+id/buttontest"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Button" />
                </LinearLayout>

            </LinearLayout>
        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>